--- a/src/com/sanms/siso/eft/view/ProcesosMC.form
+++ b/src/com/sanms/siso/eft/view/ProcesosMC.form
@@ -56,7 +56,7 @@
                       <EmptySpace min="6" pref="6" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jTabbedPane1" min="-2" pref="428" max="-2" attributes="0"/>
-                          <Component id="jButton3" min="-2" pref="112" max="-2" attributes="0"/>
+                          <Component id="BtnSendMessage" min="-2" pref="112" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
@@ -75,7 +75,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="jButton3" min="-2" pref="41" max="-2" attributes="0"/>
+                      <Component id="BtnSendMessage" min="-2" pref="41" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="jTabbedPane1" min="-2" pref="509" max="-2" attributes="0"/>
                   </Group>
@@ -161,8 +161,8 @@
                   </Group>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="txtNumberIns" pref="84" max="32767" attributes="0"/>
-                      <Component id="txtNumberTxn" max="32767" attributes="0"/>
+                      <Component id="txtNumIns" pref="84" max="32767" attributes="0"/>
+                      <Component id="txtNumTxn" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="CboxNumI" min="-2" pref="25" max="-2" attributes="0"/>
@@ -181,13 +181,13 @@
                               <Component id="CboxNumI" alignment="1" min="-2" pref="27" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="txtNumberIns" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="txtNumIns" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="txtNumberTxn" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtNumTxn" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -207,14 +207,14 @@
             <Property name="text" type="java.lang.String" value="Nro Instancias: "/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txtNumberIns">
+        <Component class="javax.swing.JTextField" name="txtNumIns">
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel6">
           <Properties>
             <Property name="text" type="java.lang.String" value="Nro de Envios:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txtNumberTxn">
+        <Component class="javax.swing.JTextField" name="txtNumTxn">
         </Component>
         <Component class="javax.swing.JCheckBox" name="CboxNumI">
           <Events>
@@ -242,7 +242,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jButton1" min="-2" pref="112" max="-2" attributes="0"/>
+                  <Component id="BtnOpenCloseSocket" min="-2" pref="112" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="imgConn" min="-2" pref="50" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
@@ -281,7 +281,7 @@
                           </Group>
                       </Group>
                       <Component id="imgConn" alignment="0" min="-2" pref="42" max="-2" attributes="0"/>
-                      <Component id="jButton1" alignment="0" min="-2" pref="42" max="-2" attributes="0"/>
+                      <Component id="BtnOpenCloseSocket" alignment="0" min="-2" pref="42" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -289,12 +289,12 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JButton" name="jButton1">
+        <Component class="javax.swing.JButton" name="BtnOpenCloseSocket">
           <Properties>
             <Property name="text" type="java.lang.String" value="Conectar"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtnOpenCloseSocketActionPerformed"/>
           </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
@@ -453,12 +453,12 @@
         </Container>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JButton" name="jButton3">
+    <Component class="javax.swing.JButton" name="BtnSendMessage">
       <Properties>
         <Property name="text" type="java.lang.String" value="Enviar"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtnSendMessageActionPerformed"/>
       </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
