--- a/src/com/sanms/siso/eft/view/ProcesosMC.form
+++ b/src/com/sanms/siso/eft/view/ProcesosMC.form
@@ -123,11 +123,11 @@
                   <Component id="panelConfiguration1" pref="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="panelConfiguration2" max="32767" attributes="0"/>
                   <Component id="RESPUESTA" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -164,7 +164,7 @@
                       <EmptySpace min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jScrollPane6" alignment="1" max="32767" attributes="0"/>
-                          <Component id="jScrollPane5" alignment="1" pref="517" max="32767" attributes="0"/>
+                          <Component id="jScrollPane5" alignment="1" pref="650" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -183,11 +183,11 @@
                       <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
-                      <Component id="jScrollPane5" pref="216" max="32767" attributes="0"/>
+                      <Component id="jScrollPane5" pref="263" max="32767" attributes="0"/>
                       <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
-                      <Component id="jScrollPane6" pref="251" max="32767" attributes="0"/>
+                      <Component id="jScrollPane6" pref="297" max="32767" attributes="0"/>
                       <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -328,8 +328,8 @@
                     <Column editable="true" title="Hora Req" type="java.lang.Object"/>
                     <Column editable="true" title="Req" type="java.lang.Object"/>
                     <Column editable="true" title="Hora Resp" type="java.lang.Object"/>
+                    <Column editable="true" title="Res" type="java.lang.Object"/>
                     <Column editable="true" title="Total(ms) " type="java.lang.Object"/>
-                    <Column editable="true" title="TPS" type="java.lang.Object"/>
                   </Table>
                 </Property>
               </Properties>
@@ -367,7 +367,7 @@
                       <Component id="txtNumIns" pref="84" max="32767" attributes="0"/>
                       <Component id="txtNumTxn" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="CboxNumI" min="-2" pref="25" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -376,18 +376,18 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace pref="39" max="32767" attributes="0"/>
+                  <EmptySpace pref="34" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Component id="btnTCPIP" alignment="0" min="-2" pref="66" max="-2" attributes="0"/>
                       <Group type="102" alignment="0" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="CboxNumI" alignment="1" min="-2" pref="27" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="txtNumIns" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
+                              <Component id="CboxNumI" min="-2" pref="27" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="txtNumTxn" alignment="3" min="-2" max="-2" attributes="0"/>
